# gvfs-limit

./: .gitignore  CMakeLists.txt  README.md
example/: file-new.c
src/: vfs-limit.c  vfs-limit.h
